--- a/package.json
+++ b/package.json
@@ -21,27 +21,27 @@
     }
   },
   "dependencies": {
-    "@nuxt/typescript-runtime": "^1.0.0",
-    "@nuxtjs/axios": "^5.12.0",
-    "nuxt": "^2.14.0"
+    "@nuxt/typescript-runtime": "1.0.0",
+    "@nuxtjs/axios": "5.12.0",
+    "nuxt": "2.14.0"
   },
   "devDependencies": {
-    "@nuxt/types": "^2.14.0",
-    "@nuxt/typescript-build": "^2.0.2",
-    "@nuxtjs/eslint-config-typescript": "^3.0.0",
-    "@nuxtjs/eslint-module": "^2.0.0",
-    "@nuxtjs/stylelint-module": "^4.0.0",
-    "@nuxtjs/tailwindcss": "^2.1.0",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^7.5.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-nuxt": "^1.0.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "husky": "^4.2.5",
-    "lint-staged": "^10.2.11",
-    "prettier": "^2.0.5",
-    "stylelint": "^13.6.1",
-    "stylelint-config-prettier": "^8.0.2",
-    "stylelint-config-standard": "^20.0.0"
+    "@nuxt/types": "2.14.0",
+    "@nuxt/typescript-build": "2.0.2",
+    "@nuxtjs/eslint-config-typescript": "3.0.0",
+    "@nuxtjs/eslint-module": "2.0.0",
+    "@nuxtjs/stylelint-module": "4.0.0",
+    "@nuxtjs/tailwindcss": "2.1.0",
+    "babel-eslint": "10.1.0",
+    "eslint": "7.5.0",
+    "eslint-config-prettier": "6.11.0",
+    "eslint-plugin-nuxt": "1.0.0",
+    "eslint-plugin-prettier": "3.1.4",
+    "husky": "4.2.5",
+    "lint-staged": "10.2.11",
+    "prettier": "2.0.5",
+    "stylelint": "13.6.1",
+    "stylelint-config-prettier": "8.0.2",
+    "stylelint-config-standard": "20.0.0"
   }
 }
