--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   "dependencies": {
     "@nuxt/typescript-runtime": "1.0.0",
     "@nuxtjs/axios": "5.12.0",
+    "aws-sdk": "2.747.0",
+    "lodash.mergewith": "4.6.2",
     "nuxt": "2.14.0"
   },
   "devDependencies": {
@@ -34,6 +36,7 @@
     "@nuxtjs/eslint-module": "2.0.0",
     "@nuxtjs/stylelint-module": "4.0.0",
     "@nuxtjs/tailwindcss": "3.0.2",
+    "@types/lodash.mergewith": "4.6.6",
     "babel-eslint": "10.1.0",
     "eslint": "7.5.0",
     "eslint-config-prettier": "6.11.0",
