--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
     }
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "5.14.0",
     "@nuxt/typescript-runtime": "1.0.0",
     "@nuxtjs/axios": "5.12.0",
     "aws-sdk": "2.747.0",
     "lodash.mergewith": "4.6.2",
-    "nuxt": "2.14.0"
+    "nuxt": "2.14.0",
+    "nuxt-fontawesome": "0.4.0",
+    "nuxt-property-decorator": "2.7.2"
   },
   "devDependencies": {
     "@nuxt/types": "2.14.0",
