--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "lodash.mergewith": "4.6.2",
     "nuxt": "2.14.0",
     "nuxt-fontawesome": "0.4.0",
-    "nuxt-property-decorator": "2.7.2"
+    "nuxt-property-decorator": "2.7.2",
+    "vue-plyr": "6.0.4"
   },
   "devDependencies": {
+    "@babel/runtime-corejs3": "7.11.2",
     "@nuxt/types": "2.14.0",
     "@nuxt/typescript-build": "2.0.2",
     "@nuxtjs/eslint-config-typescript": "3.0.0",
@@ -41,6 +43,7 @@
     "@nuxtjs/tailwindcss": "3.0.2",
     "@types/lodash.mergewith": "4.6.6",
     "babel-eslint": "10.1.0",
+    "core-js": "3.6.5",
     "eslint": "7.5.0",
     "eslint-config-prettier": "6.11.0",
     "eslint-plugin-nuxt": "1.0.0",
