--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nuxt/typescript-runtime": "1.0.0",
     "@nuxtjs/axios": "5.12.0",
     "aws-sdk": "2.747.0",
+    "lodash.get": "^4.4.2",
     "lodash.mergewith": "4.6.2",
     "nuxt": "2.14.0",
     "nuxt-fontawesome": "0.4.0",
@@ -41,6 +42,7 @@
     "@nuxtjs/eslint-module": "2.0.0",
     "@nuxtjs/stylelint-module": "4.0.0",
     "@nuxtjs/tailwindcss": "3.0.2",
+    "@types/lodash.get": "^4.4.6",
     "@types/lodash.mergewith": "4.6.6",
     "babel-eslint": "10.1.0",
     "core-js": "3.6.5",
